--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "typescript-language-server": "^3.3.2"
   }
 }
